Rscript command working on Linux and Windows